# USF-Python

./: README.md  README_zh.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
tests/: test_generator.py  test_parser.py  test_usf.py
usf/: __init__.py  generator.py  parser.py  validator.py
