[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "usf"
version = "0.1.0"
description = "A lightweight Universal Schedule Format (USF) parser and generator."
authors = [{ name = "USF-org", email = "USF-org@outlook.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.6"
dependencies = []

[project.urls]
Homepage = "https://github.com/USF-org"
Repository = "https://github.com/USF-org/USF-Python"
Issues = "https://github.com/USF-org/USF-Python/issues"

[tool.hatch.build]
packages = ["usf"]